--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,11 @@
     "node": ">=14.13.1"
   },
   "dependencies": {
+    "@bugsnag/js": "^7.17.0",
+    "@bugsnag/plugin-express": "^7.17.0",
     "@shopify/shopify-api": "^5.0.0",
     "@supabase/supabase-js": "^1.35.6",
+    "analytics-node": "^6.2.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
