--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bugsnag/js": "^7.17.0",
     "@bugsnag/plugin-express": "^7.17.0",
+    "@shopify/admin-graphql-api-utilities": "^2.0.0",
     "@shopify/shopify-api": "^5.0.0",
     "@supabase/supabase-js": "^1.35.6",
     "analytics-node": "^6.2.0",
